syntax = "proto3";

package org.htc.protobuf.core.entity.event.control.load;

import "core/entity/actor.proto";
import "google/protobuf/any.proto";

message InitializationData {
  google.protobuf.Any data = 1;
  map<string, Dependency> dependencies = 2;
}

message RequestInitializeData {
  string id = 1;
  string classType = 2;
}